@@ -59,6 +59,7 @@
 			<description>
 				<p>Changelog</p>
 				<ul>
+					<li>Add ability to show thumbnails in batch downloader tab when using gallery-dl.</li>
 					<li>Make it possible to specifically call VLC to stream media(needs org.freedesktop.Flatpak permission).</li>
 					<li>Add Bulgarian translations.</li>
 					<li>It is now possible to start downloading while the playlist tab is getting filled with entries.</li>
